--- a/survey.html
+++ b/survey.html
@@ -29,7 +29,7 @@
             </div>
             <div class="col-lg-12">
                 <div class="item">
-                    <a href="#" class="btn btn-light links fs-2">
+                    <a href="https://docs.google.com/forms/d/15nyjjs8xQj0iBrdd5bkwKx0le3tFXufUabr82QADSmU/viewform"target="blank" class="btn btn-light links fs-2">
                         العربية
                     </a>
                 </div>
